Try and fix build

--- a/src/swa-cli.config.json
+++ b/src/swa-cli.config.json
@@ -4,7 +4,7 @@
     "default": {
       "appLocation": "web",
       "apiLocation": "api",
-      "outputLocation": "bin\\wwwroot",
+      "outputLocation": "wwwroot",
       "apiLanguage": "dotnetisolated",
       "apiVersion": "8.0",
       "appBuildCommand": "dotnet publish -c Release -o bin",
