--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,33 +1,22 @@
 {
-  "build": {
-    "dockerfile": "./Dockerfile",
-    "context": "."
-  },
+  "image": "mcr.microsoft.com/devcontainers/dotnet:8.0-bookworm",
   "features": {
-    "ghcr.io/azure/azure-dev/azd:latest": {},
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/devcontainers/features/common-utils:2": {
-      "installZsh": "true",
-      "username": "vscode",
-      "userUid": "1000",
-      "userGid": "1000",
-      "upgradePackages": "true"
-    },
-    "ghcr.io/devcontainers/features/node:1": {
-      "version": "18"
-    },
-    "ghcr.io/devcontainers/features/git:1": {
-      "version": "latest",
-      "ppa": "false"
-    }
+      "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+      "ghcr.io/azure/azure-dev/azd:latest": {}
   },
   "customizations": {
-    "vscode": {
-      "extensions": [
-        "ms-dotnettools.csdevkit"
-      ]
-    }
+      "vscode": {
+          "extensions": [
+              "github.vscode-github-actions",
+              "ms-azuretools.azure-dev",
+              "ms-azuretools.vscode-azurefunctions",
+              "ms-azuretools.vscode-azurestaticwebapps",
+              "ms-azuretools.vscode-bicep",
+              "ms-azuretools.vscode-docker",
+              "ms-dotnettools.csdevkit",
+              "ms-mssql.mssql"
+          ]
+      }
   },
-  "remoteUser": "vscode",
   "postCreateCommand": "npm install --global @azure/static-web-apps-cli"
 }
