--- a/src/web/DAB.Samples.AzureSQL.Quickstart.Web.csproj
+++ b/src/web/DAB.Samples.AzureSQL.Quickstart.Web.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.3" PrivateAssets="all" />
   </ItemGroup>
+  <Target Name="CopyCustomContentOnPublish" AfterTargets="Publish">
+    <Copy SourceFiles="readme.md" DestinationFolder="$(PublishDir)\build\wwwroot" />
+  </Target>
 </Project>
