--- a/azure.yaml
+++ b/azure.yaml
@@ -20,5 +20,9 @@ services:
         windows:
           shell: pwsh
           run: dotnet publish -c Release --output ./build
+  api:
+    project: ./src/api
+    language: dotnet
+    host: function
 pipeline:
   provider: github
